login api almost finished

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,8 +7,18 @@ body,
   height: 100%;
 }
 
+a {
+  color: #00acff;
+}
+
 #header {
   box-shadow: 0px 1px 12px rgb(32, 32, 32);
+}
+
+#root-divider {
+  display: flex;
+  flex-flow: column;
+  min-height: 100%;
 }
 
 * {
@@ -34,7 +44,7 @@ body,
 #post-container {
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 0.6fr 3.5fr 1fr;
+  grid-template-columns: 1fr 3.5fr 1fr;
 }
 #post-container section {
   background-color: gray;
