--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Nunito&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -5,6 +6,10 @@ html,
 body,
 #root {
   height: 100%;
+}
+
+.nunito {
+  font-family: "Nunito", sans-serif;
 }
 
 a {
@@ -27,6 +32,10 @@ a {
 }
 
 .mug-blue-bg {
+  background-color: #00acff;
+}
+
+.mug-blue-text {
   background-color: #00acff;
 }
 
