--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -75,4 +75,9 @@ a {
 #post-create-form {
   max-width: 70%;
   min-width: min(480px, 70%);
+}
+
+.hide-outline {
+  -webkit-appearance: none;
+  outline: 0px !important;
 }/*# sourceMappingURL=index.css.map */
