--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -77,3 +77,8 @@ a {
 	max-width: 70%;
 	min-width: min(480px, 70%);
 }
+
+.hide-outline {
+	-webkit-appearance: none;
+	outline: 0px !important;
+}
