--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -11,8 +11,16 @@ body,
 	height: 100%;
 }
 
-.nunito {
+.nunito,
+* {
 	font-family: "Nunito", sans-serif;
+}
+
+.bold {
+	font-weight: 600;
+}
+.extrabold {
+	font-weight: 700;
 }
 
 a {
@@ -24,9 +32,9 @@ a {
 }
 
 #root-divider {
-	display: flex;
-	flex-flow: column;
+	display: grid;
 	min-height: 100%;
+	grid-template-rows: auto 1fr;
 }
 
 * {
