--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -88,4 +88,14 @@ a {
 .hide-outline {
   -webkit-appearance: none;
   outline: 0px !important;
+}
+
+#menu {
+  position: relative;
+  left: -22;
+  width: 22;
+  height: 100vw;
+  box-shadow: 0.33rem 0rem 1rem 0.125rem #888;
+  overflow: hidden;
+  transition: left 0.3s ease;
 }/*# sourceMappingURL=index.css.map */
