--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -26,7 +26,7 @@ a {
 }
 
 #header {
-  box-shadow: 0px 1px 12px rgb(32, 32, 32);
+  box-shadow: 0px 1px 12px rgba(0, 0, 0, 0.6);
 }
 
 #root-divider {
@@ -95,7 +95,7 @@ a {
   left: -22;
   width: 22;
   height: 100vw;
-  box-shadow: 0.33rem 0rem 1rem 0.125rem #888;
+  box-shadow: 0.33rem 0rem 1rem 0.125rem rgba(0, 0, 0, 0.33);
   overflow: hidden;
   transition: left 0.3s ease;
 }/*# sourceMappingURL=index.css.map */
