--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,6 +2,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@media screen and (max-width: 768px) {
+  :root {
+    font-size: 12px;
+  }
+}
+@media screen and (max-width: 1024) {
+  :root {
+    font-size: 14px;
+  }
+}
+@media screen and (min-width: 1025) {
+  :root {
+    font-size: 16px;
+  }
+}
 html,
 body,
 #root {
@@ -92,10 +107,20 @@ a {
 
 #menu {
   position: relative;
-  left: -22;
-  width: 22;
   height: 100vw;
   box-shadow: 0.33rem 0rem 1rem 0.125rem rgba(0, 0, 0, 0.33);
   overflow: hidden;
   transition: left 0.3s ease;
+}
+@media screen and (min-width: 769px) {
+  #menu {
+    left: -22rem;
+    width: 22rem;
+  }
+}
+@media screen and (max-width: 768px) {
+  #menu {
+    left: -100%;
+    width: 100%;
+  }
 }/*# sourceMappingURL=index.css.map */
