--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -5,6 +5,23 @@
 
 $mugblue: #00acff;
 
+@media screen and (max-width: 768px) {
+	:root {
+		font-size: 12px;
+	}
+}
+@media screen and (max-width: 1024) {
+	:root {
+		font-size: 14px;
+	}
+}
+@media screen and (min-width: 1025) {
+	:root {
+		font-size: 16px;
+	}
+}
+
+
 html,
 body,
 #root {
@@ -92,12 +109,20 @@ a {
 
 
 
-$menu-width-size: 22;
+$menu-width-size: 22rem;
 
 #menu {
 	position: relative;
-	left: -$menu-width-size;
-	width: $menu-width-size;
+	@media screen and (min-width: 769px) {
+		left: -$menu-width-size;
+		width: $menu-width-size;
+		
+	}
+	@media screen and (max-width: 768px) {
+		left: -100%;
+		width: 100%;
+		
+	}
 	height: 100vw;
 
 	box-shadow: 0.33rem 0rem 1rem 0.125rem rgba(0,0,0,0.33);
