better responsive rem

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,12 +7,12 @@
     font-size: 12px;
   }
 }
-@media screen and (max-width: 1024) {
+@media screen and ((min-width: 768px) and (max-width: 1024px)) {
   :root {
     font-size: 14px;
   }
 }
-@media screen and (min-width: 1025) {
+@media screen and (min-width: 1025px) {
   :root {
     font-size: 16px;
   }
