--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -10,12 +10,12 @@ $mugblue: #00acff;
 		font-size: 12px;
 	}
 }
-@media screen and (max-width: 1024) {
+@media screen and ((min-width: 768px) and (max-width: 1024px)) {
 	:root {
 		font-size: 14px;
 	}
 }
-@media screen and (min-width: 1025) {
+@media screen and (min-width: 1025px) {
 	:root {
 		font-size: 16px;
 	}
